--- a/Draw/ZhaJinHua/Controller/ZJHGameController.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHGameController.xib
@@ -340,11 +340,14 @@
 						<reference key="IBUINormalTitleColor" ref="129307563"/>
 						<reference key="IBUISelectedTitleShadowColor" ref="321640810"/>
 						<reference key="IBUINormalTitleShadowColor" ref="321640810"/>
-						<object class="NSCustomResource" key="IBUISelectedBackgroundImage" id="846275372">
+						<object class="NSCustomResource" key="IBUISelectedBackgroundImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">zjh_auto_bet_on@2x.png</string>
+						</object>
+						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">zjh_auto_bet@2x.png</string>
 						</object>
-						<reference key="IBUINormalBackgroundImage" ref="846275372"/>
 						<reference key="IBUIFontDescription" ref="670079205"/>
 						<reference key="IBUIFont" ref="669435553"/>
 					</object>
@@ -399,6 +402,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{272, 421}, {45, 30}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -610,7 +614,7 @@
 					</object>
 					<object class="IBUIButton" id="314769375">
 						<reference key="NSNextResponder" ref="483638841"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{219, 311}, {31, 25}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
 						<reference key="NSNextKeyView" ref="962014495"/>
@@ -5540,19 +5544,20 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="runaway@2x.png">{16, 16}</string>
-			<string key="setting@2x.png">{16, 16}</string>
-			<string key="tree@2x.png">{16, 16}</string>
-			<string key="zjh_auto_bet@2x.png">{16, 16}</string>
-			<string key="zjh_bet@2x.png">{16, 16}</string>
-			<string key="zjh_button_holder_bg@2x.png">{16, 16}</string>
-			<string key="zjh_check_card@2x.png">{16, 16}</string>
-			<string key="zjh_compare_card@2x.png">{16, 16}</string>
-			<string key="zjh_fold_card@2x.png">{16, 16}</string>
-			<string key="zjh_game_bg@2x.jpg">{16, 16}</string>
-			<string key="zjh_game_total_bet_bg@2x.png">{16, 16}</string>
-			<string key="zjh_raise_bet@2x.png">{16, 16}</string>
-			<string key="zjh_user_bet_bg@2x.png">{16, 16}</string>
+			<string key="runaway@2x.png">{72, 72}</string>
+			<string key="setting@2x.png">{74, 74}</string>
+			<string key="tree@2x.png">{79, 81}</string>
+			<string key="zjh_auto_bet@2x.png">{127, 60}</string>
+			<string key="zjh_auto_bet_on@2x.png">{127, 60}</string>
+			<string key="zjh_bet@2x.png">{103, 60}</string>
+			<string key="zjh_button_holder_bg@2x.png">{640, 110}</string>
+			<string key="zjh_check_card@2x.png">{82, 60}</string>
+			<string key="zjh_compare_card@2x.png">{92, 60}</string>
+			<string key="zjh_fold_card@2x.png">{90, 60}</string>
+			<string key="zjh_game_bg@2x.jpg">{640, 960}</string>
+			<string key="zjh_game_total_bet_bg@2x.png">{329, 43}</string>
+			<string key="zjh_raise_bet@2x.png">{98, 60}</string>
+			<string key="zjh_user_bet_bg@2x.png">{100, 34}</string>
 		</dictionary>
 		<bool key="IBDocument.UseAutolayout">YES</bool>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
