--- a/Draw/ZhaJinHua/View/PokerView.xib
+++ b/Draw/ZhaJinHua/View/PokerView.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1187</string>
-		<string key="IBDocument.HIToolboxVersion">624.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -35,11 +35,11 @@
 			</object>
 			<object class="IBUIView" id="191373211">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">274</int>
+				<int key="NSvFlags">301</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="585918103">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{32, 42}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
@@ -50,11 +50,11 @@
 					</object>
 					<object class="IBUIView" id="69953507">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="767743560">
 								<reference key="NSNextResponder" ref="69953507"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{32, 42}</string>
 								<reference key="NSSuperview" ref="69953507"/>
 								<reference key="NSWindow"/>
@@ -65,7 +65,7 @@
 							</object>
 							<object class="IBUIImageView" id="1073502811">
 								<reference key="NSNextResponder" ref="69953507"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{6, 13}, {20, 26}}</string>
 								<reference key="NSSuperview" ref="69953507"/>
 								<reference key="NSWindow"/>
@@ -76,7 +76,7 @@
 							</object>
 							<object class="IBUIImageView" id="227539422">
 								<reference key="NSNextResponder" ref="69953507"/>
-								<int key="NSvFlags">274</int>
+								<int key="NSvFlags">310</int>
 								<string key="NSFrame">{{3, 2}, {8, 11}}</string>
 								<reference key="NSSuperview" ref="69953507"/>
 								<reference key="NSWindow"/>
@@ -87,7 +87,7 @@
 							</object>
 							<object class="IBUIImageView" id="397603727">
 								<reference key="NSNextResponder" ref="69953507"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">310</int>
 								<string key="NSFrame">{{3, 12}, {8, 9}}</string>
 								<reference key="NSSuperview" ref="69953507"/>
 								<reference key="NSWindow"/>
@@ -98,7 +98,7 @@
 							</object>
 							<object class="IBUIImageView" id="482894156">
 								<reference key="NSNextResponder" ref="69953507"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">307</int>
 								<string key="NSFrame">{{21, 2}, {11, 16}}</string>
 								<reference key="NSSuperview" ref="69953507"/>
 								<reference key="NSWindow"/>
@@ -109,7 +109,7 @@
 							</object>
 							<object class="IBUILabel" id="119259762">
 								<reference key="NSNextResponder" ref="69953507"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{16, 21}, {1, 1}}</string>
 								<reference key="NSSuperview" ref="69953507"/>
 								<reference key="NSWindow"/>
@@ -162,7 +162,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="50181958">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="785200222">
@@ -170,6 +170,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{43, 36}</string>
 						<reference key="NSSuperview" ref="50181958"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="14893230"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -184,6 +185,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{4, 4}, {35, 25}}</string>
 						<reference key="NSSuperview" ref="50181958"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -211,6 +213,8 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{43, 36}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="785200222"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="556809111"/>
